<resources>
    <string name="app_name">Android_app</string>
    <string name="username">username</string>
    <string name="if_your_student_please_click_here">if your a student please click here</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="closedrawer">Close</string>
    <string name="opendrawer">Open</string>
    <string name="home">home</string>
    <string name="setting">Setting</string>
    <string name="others">others</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">LOGOUT</string>
    <string name="to_create_new_account_click_here">to create new account click here</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="departement">Departement</string>
    <string name="department">department</string>
    <string name="section">Section</string>
    <string name="registered_year">registered year</string>
    <string name="micro_id">MIcro_Id</string>
    <string name="confirm_password">Confirm_Password</string>
    <string name="submit">submit</string>
    <string name="year">year</string>
    <string name="search">Search</string>
    <string name="firstname">Firstname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="year_you_registered">year you registered</string>
    <string name="register">Register</string>
    <string name="studentid">StudentId</string>
    <string name="First_Name">first name</string>
    <string name="First_name">First name</string>
    <string name="Year" />
    <string name="student_name">Student name</string>
    <string name="id_number">ID number</string>
</resources>
