<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Student_Signup_Activity">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/first_name"
    android:id="@+id/first"
    android:inputType="text"
    android:importantForAutofill="no"
    />
    <EditText
        android:layout_below="@id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:id="@+id/last"
        android:inputType="text"
        android:importantForAutofill="no"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gendergroup"
        android:layout_below="@id/last">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="19sp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/male"
            android:checked="true"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/female"
            android:text="@string/female"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/department"
        android:layout_below="@id/gendergroup"/>

    <Spinner
        android:id="@+id/departement"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:layout_below="@+id/gendergroup"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="2dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/departement"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:text="@string/section"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:id="@+id/section"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:layout_below="@+id/departement"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="29dp"
        android:spinnerMode="dropdown" />

    <EditText

        android:id="@+id/year_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp"
        android:hint="@string/year_you_registered"
        android:importantForAutofill="no"
        android:inputType="number"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/studentid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/year_register"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="1dp"
        android:hint="@string/studentid"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/studentid"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="6dp"
        android:text="@string/register" />
</RelativeLayout>